Added economic categories for arcology decisions

--- a/localisation/english/replace/zzzz_uml_modifier_l_english.yml
+++ b/localisation/english/replace/zzzz_uml_modifier_l_english.yml
@@ -17726,3 +17726,199 @@
  mod_planet_jobs_hired_all_research_upkeep_add: "$mod_planet_jobs_hired_all_research_upkeep_mult$"
  mod_planet_jobs_hired_all_industrial_upkeep_add: "$mod_planet_jobs_hired_all_industrial_upkeep_mult$"
  mod_planet_jobs_hired_all_basic_upkeep_add: "$mod_planet_jobs_hired_all_basic_upkeep_mult$"
+
+ # decisions - Decisions
+ mod_base_decisions: "Decisions"
+
+ mod_decisions_cost_mult: "Decisions Cost"
+
+ mod_decisions_minerals_cost_mult: "Decisions £minerals£ $minerals$ Cost"
+ mod_decisions_food_cost_mult: "Decisions £food£ $food$ Cost"
+ mod_decisions_energy_cost_mult: "Decisions £energy£ $energy$ Cost"
+ mod_decisions_consumer_goods_cost_mult: "Decisions £consumer_goods£ $consumer_goods$ Cost"
+ mod_decisions_alloys_cost_mult: "Decisions £alloys£ $alloys$ Cost"
+ mod_decisions_physics_research_cost_mult: "Decisions £physics_research£ $physics_research$ Cost"
+ mod_decisions_society_research_cost_mult: "Decisions £society_research£ $society_research$ Cost"
+ mod_decisions_engineering_research_cost_mult: "Decisions £engineering_research£ $engineering_research$ Cost"
+ mod_decisions_rare_crystals_cost_mult: "Decisions £rare_crystals£ $rare_crystals$ Cost"
+ mod_decisions_volatile_motes_cost_mult: "Decisions £volatile_motes£ $volatile_motes$ Cost"
+ mod_decisions_exotic_gases_cost_mult: "Decisions £exotic_gases£ $exotic_gases$ Cost"
+ mod_decisions_unity_cost_mult: "Decisions £unity£ $unity$ Cost"
+ mod_decisions_influence_cost_mult: "Decisions £influence£ $influence$ Cost"
+ mod_decisions_sr_living_metal_cost_mult: "Decisions £sr_living_metal£ $sr_living_metal$ Cost"
+ mod_decisions_sr_zro_cost_mult: "Decisions £sr_zro£ $sr_zro$ Cost"
+ mod_decisions_sr_dark_matter_cost_mult: "Decisions £sr_dark_matter£ $sr_dark_matter$ Cost"
+ mod_decisions_nanites_cost_mult: "Decisions £nanites£ $nanites$ Cost"
+ mod_decisions_minor_artifacts_cost_mult: "Decisions £minor_artifacts£ $minor_artifacts$ Cost"
+ mod_decisions_all_research_cost_mult: "Decisions $tec_loc_research_resources$ Cost"
+ mod_decisions_all_industrial_cost_mult: "Decisions $tec_loc_industrial_resources$ Cost"
+ mod_decisions_all_basic_cost_mult: "Decisions $tec_loc_basic_resources$ Cost"
+
+ mod_decisions_minerals_cost_add: "$mod_decisions_minerals_cost_mult$"
+ mod_decisions_food_cost_add: "$mod_decisions_food_cost_mult$"
+ mod_decisions_energy_cost_add: "$mod_decisions_energy_cost_mult$"
+ mod_decisions_consumer_goods_cost_add: "$mod_decisions_consumer_goods_cost_mult$"
+ mod_decisions_alloys_cost_add: "$mod_decisions_alloys_cost_mult$"
+ mod_decisions_physics_research_cost_add: "$mod_decisions_physics_research_cost_mult$"
+ mod_decisions_society_research_cost_add: "$mod_decisions_society_research_cost_mult$"
+ mod_decisions_engineering_research_cost_add: "$mod_decisions_engineering_research_cost_mult$"
+ mod_decisions_rare_crystals_cost_add: "$mod_decisions_rare_crystals_cost_mult$"
+ mod_decisions_volatile_motes_cost_add: "$mod_decisions_volatile_motes_cost_mult$"
+ mod_decisions_exotic_gases_cost_add: "$mod_decisions_exotic_gases_cost_mult$"
+ mod_decisions_unity_cost_add: "$mod_decisions_unity_cost_mult$"
+ mod_decisions_influence_cost_add: "$mod_decisions_influence_cost_mult$"
+ mod_decisions_sr_living_metal_cost_add: "$mod_decisions_sr_living_metal_cost_mult$"
+ mod_decisions_sr_zro_cost_add: "$mod_decisions_sr_zro_cost_mult$"
+ mod_decisions_sr_dark_matter_cost_add: "$mod_decisions_sr_dark_matter_cost_mult$"
+ mod_decisions_nanites_cost_add: "$mod_decisions_nanites_cost_mult$"
+ mod_decisions_minor_artifacts_cost_add: "$mod_decisions_minor_artifacts_cost_mult$"
+ mod_decisions_all_research_cost_add: "$mod_decisions_all_research_cost_mult$"
+ mod_decisions_all_industrial_cost_add: "$mod_decisions_all_industrial_cost_mult$"
+ mod_decisions_all_basic_cost_add: "$mod_decisions_all_basic_cost_mult$"
+
+ # decisions_arcologies - Arcology Decisions
+ mod_base_decisions_arcologies: "Arcology Decisions"
+
+ mod_decisions_arcologies_cost_mult: "Arcology Decisions Cost"
+
+ mod_decisions_arcologies_minerals_cost_mult: "Arcology Decisions £minerals£ $minerals$ Cost"
+ mod_decisions_arcologies_food_cost_mult: "Arcology Decisions £food£ $food$ Cost"
+ mod_decisions_arcologies_energy_cost_mult: "Arcology Decisions £energy£ $energy$ Cost"
+ mod_decisions_arcologies_consumer_goods_cost_mult: "Arcology Decisions £consumer_goods£ $consumer_goods$ Cost"
+ mod_decisions_arcologies_alloys_cost_mult: "Arcology Decisions £alloys£ $alloys$ Cost"
+ mod_decisions_arcologies_physics_research_cost_mult: "Arcology Decisions £physics_research£ $physics_research$ Cost"
+ mod_decisions_arcologies_society_research_cost_mult: "Arcology Decisions £society_research£ $society_research$ Cost"
+ mod_decisions_arcologies_engineering_research_cost_mult: "Arcology Decisions £engineering_research£ $engineering_research$ Cost"
+ mod_decisions_arcologies_rare_crystals_cost_mult: "Arcology Decisions £rare_crystals£ $rare_crystals$ Cost"
+ mod_decisions_arcologies_volatile_motes_cost_mult: "Arcology Decisions £volatile_motes£ $volatile_motes$ Cost"
+ mod_decisions_arcologies_exotic_gases_cost_mult: "Arcology Decisions £exotic_gases£ $exotic_gases$ Cost"
+ mod_decisions_arcologies_unity_cost_mult: "Arcology Decisions £unity£ $unity$ Cost"
+ mod_decisions_arcologies_influence_cost_mult: "Arcology Decisions £influence£ $influence$ Cost"
+ mod_decisions_arcologies_sr_living_metal_cost_mult: "Arcology Decisions £sr_living_metal£ $sr_living_metal$ Cost"
+ mod_decisions_arcologies_sr_zro_cost_mult: "Arcology Decisions £sr_zro£ $sr_zro$ Cost"
+ mod_decisions_arcologies_sr_dark_matter_cost_mult: "Arcology Decisions £sr_dark_matter£ $sr_dark_matter$ Cost"
+ mod_decisions_arcologies_nanites_cost_mult: "Arcology Decisions £nanites£ $nanites$ Cost"
+ mod_decisions_arcologies_minor_artifacts_cost_mult: "Arcology Decisions £minor_artifacts£ $minor_artifacts$ Cost"
+ mod_decisions_arcologies_all_research_cost_mult: "Arcology Decisions $tec_loc_research_resources$ Cost"
+ mod_decisions_arcologies_all_industrial_cost_mult: "Arcology Decisions $tec_loc_industrial_resources$ Cost"
+ mod_decisions_arcologies_all_basic_cost_mult: "Arcology Decisions $tec_loc_basic_resources$ Cost"
+
+ mod_decisions_arcologies_minerals_cost_add: "$mod_decisions_arcologies_minerals_cost_mult$"
+ mod_decisions_arcologies_food_cost_add: "$mod_decisions_arcologies_food_cost_mult$"
+ mod_decisions_arcologies_energy_cost_add: "$mod_decisions_arcologies_energy_cost_mult$"
+ mod_decisions_arcologies_consumer_goods_cost_add: "$mod_decisions_arcologies_consumer_goods_cost_mult$"
+ mod_decisions_arcologies_alloys_cost_add: "$mod_decisions_arcologies_alloys_cost_mult$"
+ mod_decisions_arcologies_physics_research_cost_add: "$mod_decisions_arcologies_physics_research_cost_mult$"
+ mod_decisions_arcologies_society_research_cost_add: "$mod_decisions_arcologies_society_research_cost_mult$"
+ mod_decisions_arcologies_engineering_research_cost_add: "$mod_decisions_arcologies_engineering_research_cost_mult$"
+ mod_decisions_arcologies_rare_crystals_cost_add: "$mod_decisions_arcologies_rare_crystals_cost_mult$"
+ mod_decisions_arcologies_volatile_motes_cost_add: "$mod_decisions_arcologies_volatile_motes_cost_mult$"
+ mod_decisions_arcologies_exotic_gases_cost_add: "$mod_decisions_arcologies_exotic_gases_cost_mult$"
+ mod_decisions_arcologies_unity_cost_add: "$mod_decisions_arcologies_unity_cost_mult$"
+ mod_decisions_arcologies_influence_cost_add: "$mod_decisions_arcologies_influence_cost_mult$"
+ mod_decisions_arcologies_sr_living_metal_cost_add: "$mod_decisions_arcologies_sr_living_metal_cost_mult$"
+ mod_decisions_arcologies_sr_zro_cost_add: "$mod_decisions_arcologies_sr_zro_cost_mult$"
+ mod_decisions_arcologies_sr_dark_matter_cost_add: "$mod_decisions_arcologies_sr_dark_matter_cost_mult$"
+ mod_decisions_arcologies_nanites_cost_add: "$mod_decisions_arcologies_nanites_cost_mult$"
+ mod_decisions_arcologies_minor_artifacts_cost_add: "$mod_decisions_arcologies_minor_artifacts_cost_mult$"
+ mod_decisions_arcologies_all_research_cost_add: "$mod_decisions_arcologies_all_research_cost_mult$"
+ mod_decisions_arcologies_all_industrial_cost_add: "$mod_decisions_arcologies_all_industrial_cost_mult$"
+ mod_decisions_arcologies_all_basic_cost_add: "$mod_decisions_arcologies_all_basic_cost_mult$"
+
+ # decisions_ecoworld - Ecoworld Decisions
+ mod_base_decisions_ecoworld: "Ecoworld Decisions"
+
+ mod_decisions_ecoworld_cost_mult: "Ecoworld Decisions Cost"
+
+ mod_decisions_ecoworld_minerals_cost_mult: "Ecoworld Decisions £minerals£ $minerals$ Cost"
+ mod_decisions_ecoworld_food_cost_mult: "Ecoworld Decisions £food£ $food$ Cost"
+ mod_decisions_ecoworld_energy_cost_mult: "Ecoworld Decisions £energy£ $energy$ Cost"
+ mod_decisions_ecoworld_consumer_goods_cost_mult: "Ecoworld Decisions £consumer_goods£ $consumer_goods$ Cost"
+ mod_decisions_ecoworld_alloys_cost_mult: "Ecoworld Decisions £alloys£ $alloys$ Cost"
+ mod_decisions_ecoworld_physics_research_cost_mult: "Ecoworld Decisions £physics_research£ $physics_research$ Cost"
+ mod_decisions_ecoworld_society_research_cost_mult: "Ecoworld Decisions £society_research£ $society_research$ Cost"
+ mod_decisions_ecoworld_engineering_research_cost_mult: "Ecoworld Decisions £engineering_research£ $engineering_research$ Cost"
+ mod_decisions_ecoworld_rare_crystals_cost_mult: "Ecoworld Decisions £rare_crystals£ $rare_crystals$ Cost"
+ mod_decisions_ecoworld_volatile_motes_cost_mult: "Ecoworld Decisions £volatile_motes£ $volatile_motes$ Cost"
+ mod_decisions_ecoworld_exotic_gases_cost_mult: "Ecoworld Decisions £exotic_gases£ $exotic_gases$ Cost"
+ mod_decisions_ecoworld_unity_cost_mult: "Ecoworld Decisions £unity£ $unity$ Cost"
+ mod_decisions_ecoworld_influence_cost_mult: "Ecoworld Decisions £influence£ $influence$ Cost"
+ mod_decisions_ecoworld_sr_living_metal_cost_mult: "Ecoworld Decisions £sr_living_metal£ $sr_living_metal$ Cost"
+ mod_decisions_ecoworld_sr_zro_cost_mult: "Ecoworld Decisions £sr_zro£ $sr_zro$ Cost"
+ mod_decisions_ecoworld_sr_dark_matter_cost_mult: "Ecoworld Decisions £sr_dark_matter£ $sr_dark_matter$ Cost"
+ mod_decisions_ecoworld_nanites_cost_mult: "Ecoworld Decisions £nanites£ $nanites$ Cost"
+ mod_decisions_ecoworld_minor_artifacts_cost_mult: "Ecoworld Decisions £minor_artifacts£ $minor_artifacts$ Cost"
+ mod_decisions_ecoworld_all_research_cost_mult: "Ecoworld Decisions $tec_loc_research_resources$ Cost"
+ mod_decisions_ecoworld_all_industrial_cost_mult: "Ecoworld Decisions $tec_loc_industrial_resources$ Cost"
+ mod_decisions_ecoworld_all_basic_cost_mult: "Ecoworld Decisions $tec_loc_basic_resources$ Cost"
+
+ mod_decisions_ecoworld_minerals_cost_add: "$mod_decisions_ecoworld_minerals_cost_mult$"
+ mod_decisions_ecoworld_food_cost_add: "$mod_decisions_ecoworld_food_cost_mult$"
+ mod_decisions_ecoworld_energy_cost_add: "$mod_decisions_ecoworld_energy_cost_mult$"
+ mod_decisions_ecoworld_consumer_goods_cost_add: "$mod_decisions_ecoworld_consumer_goods_cost_mult$"
+ mod_decisions_ecoworld_alloys_cost_add: "$mod_decisions_ecoworld_alloys_cost_mult$"
+ mod_decisions_ecoworld_physics_research_cost_add: "$mod_decisions_ecoworld_physics_research_cost_mult$"
+ mod_decisions_ecoworld_society_research_cost_add: "$mod_decisions_ecoworld_society_research_cost_mult$"
+ mod_decisions_ecoworld_engineering_research_cost_add: "$mod_decisions_ecoworld_engineering_research_cost_mult$"
+ mod_decisions_ecoworld_rare_crystals_cost_add: "$mod_decisions_ecoworld_rare_crystals_cost_mult$"
+ mod_decisions_ecoworld_volatile_motes_cost_add: "$mod_decisions_ecoworld_volatile_motes_cost_mult$"
+ mod_decisions_ecoworld_exotic_gases_cost_add: "$mod_decisions_ecoworld_exotic_gases_cost_mult$"
+ mod_decisions_ecoworld_unity_cost_add: "$mod_decisions_ecoworld_unity_cost_mult$"
+ mod_decisions_ecoworld_influence_cost_add: "$mod_decisions_ecoworld_influence_cost_mult$"
+ mod_decisions_ecoworld_sr_living_metal_cost_add: "$mod_decisions_ecoworld_sr_living_metal_cost_mult$"
+ mod_decisions_ecoworld_sr_zro_cost_add: "$mod_decisions_ecoworld_sr_zro_cost_mult$"
+ mod_decisions_ecoworld_sr_dark_matter_cost_add: "$mod_decisions_ecoworld_sr_dark_matter_cost_mult$"
+ mod_decisions_ecoworld_nanites_cost_add: "$mod_decisions_ecoworld_nanites_cost_mult$"
+ mod_decisions_ecoworld_minor_artifacts_cost_add: "$mod_decisions_ecoworld_minor_artifacts_cost_mult$"
+ mod_decisions_ecoworld_all_research_cost_add: "$mod_decisions_ecoworld_all_research_cost_mult$"
+ mod_decisions_ecoworld_all_industrial_cost_add: "$mod_decisions_ecoworld_all_industrial_cost_mult$"
+ mod_decisions_ecoworld_all_basic_cost_add: "$mod_decisions_ecoworld_all_basic_cost_mult$"
+
+ # decisions_ecu - Ecumenopolis Decisions
+ mod_base_decisions_ecu: "Ecumenopolis Decisions"
+
+ mod_decisions_ecu_cost_mult: "Ecumenopolis Decisions Cost"
+
+ mod_decisions_ecu_minerals_cost_mult: "Ecumenopolis Decisions £minerals£ $minerals$ Cost"
+ mod_decisions_ecu_food_cost_mult: "Ecumenopolis Decisions £food£ $food$ Cost"
+ mod_decisions_ecu_energy_cost_mult: "Ecumenopolis Decisions £energy£ $energy$ Cost"
+ mod_decisions_ecu_consumer_goods_cost_mult: "Ecumenopolis Decisions £consumer_goods£ $consumer_goods$ Cost"
+ mod_decisions_ecu_alloys_cost_mult: "Ecumenopolis Decisions £alloys£ $alloys$ Cost"
+ mod_decisions_ecu_physics_research_cost_mult: "Ecumenopolis Decisions £physics_research£ $physics_research$ Cost"
+ mod_decisions_ecu_society_research_cost_mult: "Ecumenopolis Decisions £society_research£ $society_research$ Cost"
+ mod_decisions_ecu_engineering_research_cost_mult: "Ecumenopolis Decisions £engineering_research£ $engineering_research$ Cost"
+ mod_decisions_ecu_rare_crystals_cost_mult: "Ecumenopolis Decisions £rare_crystals£ $rare_crystals$ Cost"
+ mod_decisions_ecu_volatile_motes_cost_mult: "Ecumenopolis Decisions £volatile_motes£ $volatile_motes$ Cost"
+ mod_decisions_ecu_exotic_gases_cost_mult: "Ecumenopolis Decisions £exotic_gases£ $exotic_gases$ Cost"
+ mod_decisions_ecu_unity_cost_mult: "Ecumenopolis Decisions £unity£ $unity$ Cost"
+ mod_decisions_ecu_influence_cost_mult: "Ecumenopolis Decisions £influence£ $influence$ Cost"
+ mod_decisions_ecu_sr_living_metal_cost_mult: "Ecumenopolis Decisions £sr_living_metal£ $sr_living_metal$ Cost"
+ mod_decisions_ecu_sr_zro_cost_mult: "Ecumenopolis Decisions £sr_zro£ $sr_zro$ Cost"
+ mod_decisions_ecu_sr_dark_matter_cost_mult: "Ecumenopolis Decisions £sr_dark_matter£ $sr_dark_matter$ Cost"
+ mod_decisions_ecu_nanites_cost_mult: "Ecumenopolis Decisions £nanites£ $nanites$ Cost"
+ mod_decisions_ecu_minor_artifacts_cost_mult: "Ecumenopolis Decisions £minor_artifacts£ $minor_artifacts$ Cost"
+ mod_decisions_ecu_all_research_cost_mult: "Ecumenopolis Decisions $tec_loc_research_resources$ Cost"
+ mod_decisions_ecu_all_industrial_cost_mult: "Ecumenopolis Decisions $tec_loc_industrial_resources$ Cost"
+ mod_decisions_ecu_all_basic_cost_mult: "Ecumenopolis Decisions $tec_loc_basic_resources$ Cost"
+
+ mod_decisions_ecu_minerals_cost_add: "$mod_decisions_ecu_minerals_cost_mult$"
+ mod_decisions_ecu_food_cost_add: "$mod_decisions_ecu_food_cost_mult$"
+ mod_decisions_ecu_energy_cost_add: "$mod_decisions_ecu_energy_cost_mult$"
+ mod_decisions_ecu_consumer_goods_cost_add: "$mod_decisions_ecu_consumer_goods_cost_mult$"
+ mod_decisions_ecu_alloys_cost_add: "$mod_decisions_ecu_alloys_cost_mult$"
+ mod_decisions_ecu_physics_research_cost_add: "$mod_decisions_ecu_physics_research_cost_mult$"
+ mod_decisions_ecu_society_research_cost_add: "$mod_decisions_ecu_society_research_cost_mult$"
+ mod_decisions_ecu_engineering_research_cost_add: "$mod_decisions_ecu_engineering_research_cost_mult$"
+ mod_decisions_ecu_rare_crystals_cost_add: "$mod_decisions_ecu_rare_crystals_cost_mult$"
+ mod_decisions_ecu_volatile_motes_cost_add: "$mod_decisions_ecu_volatile_motes_cost_mult$"
+ mod_decisions_ecu_exotic_gases_cost_add: "$mod_decisions_ecu_exotic_gases_cost_mult$"
+ mod_decisions_ecu_unity_cost_add: "$mod_decisions_ecu_unity_cost_mult$"
+ mod_decisions_ecu_influence_cost_add: "$mod_decisions_ecu_influence_cost_mult$"
+ mod_decisions_ecu_sr_living_metal_cost_add: "$mod_decisions_ecu_sr_living_metal_cost_mult$"
+ mod_decisions_ecu_sr_zro_cost_add: "$mod_decisions_ecu_sr_zro_cost_mult$"
+ mod_decisions_ecu_sr_dark_matter_cost_add: "$mod_decisions_ecu_sr_dark_matter_cost_mult$"
+ mod_decisions_ecu_nanites_cost_add: "$mod_decisions_ecu_nanites_cost_mult$"
+ mod_decisions_ecu_minor_artifacts_cost_add: "$mod_decisions_ecu_minor_artifacts_cost_mult$"
+ mod_decisions_ecu_all_research_cost_add: "$mod_decisions_ecu_all_research_cost_mult$"
+ mod_decisions_ecu_all_industrial_cost_add: "$mod_decisions_ecu_all_industrial_cost_mult$"
+ mod_decisions_ecu_all_basic_cost_add: "$mod_decisions_ecu_all_basic_cost_mult$"
