--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -211,11 +211,11 @@
 
 	tr_tec_artifice_final_2:0 "Construction Without Boundaries"
 	tr_tec_artifice_final_2_text:0 "Planetary decisions like §YArcology Project§! or §YEcoworld Project§! have their £trigger_tec_basic_resources£ Basic Resource cost reduced by §G50%§!."
-	tr_tec_artifice_final_2_tooltip:0 "$tec_tradition_swap_warning$\n\n$tr_tec_artifice_final_2_text$"
+	tr_tec_artifice_final_2_tooltip:0 "$tec_tradition_swap_warning$"
 	tr_tec_artifice_final_2_delayed:0 "Material usage can be radically reduced if instead of stockpiling and amassing great quantities for great arcology projects we make a smarter use and preplanning."
 
 	tr_tec_artifice_final_2_disabled:0 "Construction without boundaries"
-	tr_tec_artifice_final_2_disabled_tooltip:0 "$tec_tradition_swap_disabled$\n\n$tr_tec_artifice_final_2_text$"
+	tr_tec_artifice_final_2_disabled_tooltip:0 "$tec_tradition_swap_disabled$"
 	tr_tec_artifice_final_2_disabled_delayed:0 "$tr_tec_artifice_final_2_delayed$"
 
 	tr_tec_artifice_final_3:0 "Orbital Coordination"
