--- a/localisation/english/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/zz_evolved_ascension_l_english.yml
@@ -1012,6 +1012,7 @@ tech_reverse_advanced_dome: " "
  situation_tec_cybernetic_path_t1_fail_tooltip:0 "It is impossible for us to fail."
  situation_tec_cybernetic_path_t1_finish_tooltip:0 "If we complete this study, we will be able to achieve our goals, making each individual within our empire gaining Cybernetic Enhancements."
  situation_tec_cybernetic_path_t1_monthly_change_tooltip:0 "The progress of this §YSituation§! depend on our approach and potential side-events appearing during the situation."
+ situation_tec_cybernetic_path_t1_stage_0:0 "0"
  situation_tec_cybernetic_path_t1_stage_1:0 "I"
  situation_tec_cybernetic_path_t1_stage_2:0 "II"
  situation_tec_cybernetic_path_t1_stage_3:0 "III"
@@ -3082,6 +3083,9 @@ crisis_cant_pick_ap:0 "$TRIGGER_FAIL$Really are you going to take this as crisis
 # --------------------------- D E B U G -------------------------------- 
  edict_tec_fix_my_ascension:0 "Fix my ascension"
  edict_tec_fix_my_ascension_desc:0 "Fixes an ongoin ascension - If it doesn't please open a ticket. If this edicts appears without a bugged ascension, also open me a ticket"
+
+ edict_tec_fix_my_flags:0 "Fix my flags"
+ edict_tec_fix_my_flags_desc:0 "Fixed changed flags - This edict should not appear for normal empires, or appear on certain conditions"
 # ------- REMOVED TEXT
 
 # GENE ASCENSION
