loc fixes for shroud events

--- a/localisation/english/zz_evolved_shroud_l_english.yml
+++ b/localisation/english/zz_evolved_shroud_l_english.yml
@@ -3,10 +3,10 @@
 # Regular empire shroud
  utopia.3000.a:0 "Reach into the Shroud."
  venture.shroud.a.tooltip:0 "Expend high amounts of energy to boldly venture deeper in the Shroud.\n\n"
- utopia.3000.b:0 "Infused Shroud exploration."
- venture.shroud.b.tooltip:0 "Expend moderate amounts of £energy£ energy and £sr_zro£ Zro to venture deeper in the Shroud, with the help of a psionic residuum infusion.\n\n"
- utopia.3000.c:0 "Empowered Shroud visit."
- venture.shroud.c.tooltip:0 "Expend high amounts of £energy£ energy and £sr_zro£ Zro to safely venture into the deeps of the Shroud, with the help of a psionic residuum empowerment.\n\n"
+ utopia.3000.c:0 "Infused Shroud exploration."
+ venture.shroud.c.tooltip:0 "Expend moderate amounts of £energy£ energy and £sr_zro£ Zro to venture deeper in the Shroud, with the help of a psionic residuum infusion.\n\n"
+ utopia.3000.d:0 "Empowered Shroud visit."
+ venture.shroud.d.tooltip:0 "Expend high amounts of £energy£ energy and £sr_zro£ Zro to safely venture into the deeps of the Shroud, with the help of a psionic residuum empowerment.\n\n"
 
 
 # Initial shroud event changes
