Brought cybernetic loc changes to uml config

--- a/localisation/english/replace/zzzz_uml_modifier_l_english.yml
+++ b/localisation/english/replace/zzzz_uml_modifier_l_english.yml
@@ -6773,33 +6773,33 @@
  mod_planet_pops_replicant_all_industrial_upkeep_add: "$mod_planet_pops_replicant_all_industrial_upkeep_mult$"
  mod_planet_pops_replicant_all_basic_upkeep_add: "$mod_planet_pops_replicant_all_basic_upkeep_mult$"
 
- # planet_pops_tec_cybernetics - §ECyborg§! and §BRobot§! Pops
- mod_base_planet_pops_tec_cybernetics: "§ECyborg§! and §BRobot§! Pops"
+ # planet_pops_tec_cybernetics - §ECyborg§! and §BRobot§! £pop£ Pops
+ mod_base_planet_pops_tec_cybernetics: "§ECyborg§! and §BRobot§! £pop£ Pops"
 
- mod_planet_pops_tec_cybernetics_produces_mult: "§ECyborg§! and §BRobot§! Pops Output"
- mod_planet_pops_tec_cybernetics_upkeep_mult: "§ECyborg§! and §BRobot§! Pops Upkeep"
+ mod_planet_pops_tec_cybernetics_produces_mult: "§ECyborg§! and §BRobot§! £pop£ Pops Output"
+ mod_planet_pops_tec_cybernetics_upkeep_mult: "§ECyborg§! and §BRobot§! £pop£ Pops Upkeep"
 
- mod_planet_pops_tec_cybernetics_minerals_produces_mult: "£minerals£ $minerals$ form §ECyborg§! and §BRobot§! Pops"
- mod_planet_pops_tec_cybernetics_food_produces_mult: "£food£ $food$ form §ECyborg§! and §BRobot§! Pops"
- mod_planet_pops_tec_cybernetics_energy_produces_mult: "£energy£ $energy$ form §ECyborg§! and §BRobot§! Pops"
- mod_planet_pops_tec_cybernetics_consumer_goods_produces_mult: "£consumer_goods£ $consumer_goods$ form §ECyborg§! and §BRobot§! Pops"
- mod_planet_pops_tec_cybernetics_alloys_produces_mult: "£alloys£ $alloys$ form §ECyborg§! and §BRobot§! Pops"
- mod_planet_pops_tec_cybernetics_physics_research_produces_mult: "£physics_research£ $physics_research$ form §ECyborg§! and §BRobot§! Pops"
- mod_planet_pops_tec_cybernetics_society_research_produces_mult: "£society_research£ $society_research$ form §ECyborg§! and §BRobot§! Pops"
- mod_planet_pops_tec_cybernetics_engineering_research_produces_mult: "£engineering_research£ $engineering_research$ form §ECyborg§! and §BRobot§! Pops"
- mod_planet_pops_tec_cybernetics_rare_crystals_produces_mult: "£rare_crystals£ $rare_crystals$ form §ECyborg§! and §BRobot§! Pops"
- mod_planet_pops_tec_cybernetics_volatile_motes_produces_mult: "£volatile_motes£ $volatile_motes$ form §ECyborg§! and §BRobot§! Pops"
- mod_planet_pops_tec_cybernetics_exotic_gases_produces_mult: "£exotic_gases£ $exotic_gases$ form §ECyborg§! and §BRobot§! Pops"
- mod_planet_pops_tec_cybernetics_unity_produces_mult: "£unity£ $unity$ form §ECyborg§! and §BRobot§! Pops"
- mod_planet_pops_tec_cybernetics_influence_produces_mult: "£influence£ $influence$ form §ECyborg§! and §BRobot§! Pops"
- mod_planet_pops_tec_cybernetics_sr_living_metal_produces_mult: "£sr_living_metal£ $sr_living_metal$ form §ECyborg§! and §BRobot§! Pops"
- mod_planet_pops_tec_cybernetics_sr_zro_produces_mult: "£sr_zro£ $sr_zro$ form §ECyborg§! and §BRobot§! Pops"
- mod_planet_pops_tec_cybernetics_sr_dark_matter_produces_mult: "£sr_dark_matter£ $sr_dark_matter$ form §ECyborg§! and §BRobot§! Pops"
- mod_planet_pops_tec_cybernetics_nanites_produces_mult: "£nanites£ $nanites$ form §ECyborg§! and §BRobot§! Pops"
- mod_planet_pops_tec_cybernetics_minor_artifacts_produces_mult: "£minor_artifacts£ $minor_artifacts$ form §ECyborg§! and §BRobot§! Pops"
- mod_planet_pops_tec_cybernetics_all_research_produces_mult: "$tec_loc_research_resources$ form §ECyborg§! and §BRobot§! Pops"
- mod_planet_pops_tec_cybernetics_all_industrial_produces_mult: "$tec_loc_industrial_resources$ form §ECyborg§! and §BRobot§! Pops"
- mod_planet_pops_tec_cybernetics_all_basic_produces_mult: "$tec_loc_basic_resources$ form §ECyborg§! and §BRobot§! Pops"
+ mod_planet_pops_tec_cybernetics_minerals_produces_mult: "£minerals£ $minerals$ form §ECyborg§! and §BRobot§! £pop£ Pops"
+ mod_planet_pops_tec_cybernetics_food_produces_mult: "£food£ $food$ form §ECyborg§! and §BRobot§! £pop£ Pops"
+ mod_planet_pops_tec_cybernetics_energy_produces_mult: "£energy£ $energy$ form §ECyborg§! and §BRobot§! £pop£ Pops"
+ mod_planet_pops_tec_cybernetics_consumer_goods_produces_mult: "£consumer_goods£ $consumer_goods$ form §ECyborg§! and §BRobot§! £pop£ Pops"
+ mod_planet_pops_tec_cybernetics_alloys_produces_mult: "£alloys£ $alloys$ form §ECyborg§! and §BRobot§! £pop£ Pops"
+ mod_planet_pops_tec_cybernetics_physics_research_produces_mult: "£physics_research£ $physics_research$ form §ECyborg§! and §BRobot§! £pop£ Pops"
+ mod_planet_pops_tec_cybernetics_society_research_produces_mult: "£society_research£ $society_research$ form §ECyborg§! and §BRobot§! £pop£ Pops"
+ mod_planet_pops_tec_cybernetics_engineering_research_produces_mult: "£engineering_research£ $engineering_research$ form §ECyborg§! and §BRobot§! £pop£ Pops"
+ mod_planet_pops_tec_cybernetics_rare_crystals_produces_mult: "£rare_crystals£ $rare_crystals$ form §ECyborg§! and §BRobot§! £pop£ Pops"
+ mod_planet_pops_tec_cybernetics_volatile_motes_produces_mult: "£volatile_motes£ $volatile_motes$ form §ECyborg§! and §BRobot§! £pop£ Pops"
+ mod_planet_pops_tec_cybernetics_exotic_gases_produces_mult: "£exotic_gases£ $exotic_gases$ form §ECyborg§! and §BRobot§! £pop£ Pops"
+ mod_planet_pops_tec_cybernetics_unity_produces_mult: "£unity£ $unity$ form §ECyborg§! and §BRobot§! £pop£ Pops"
+ mod_planet_pops_tec_cybernetics_influence_produces_mult: "£influence£ $influence$ form §ECyborg§! and §BRobot§! £pop£ Pops"
+ mod_planet_pops_tec_cybernetics_sr_living_metal_produces_mult: "£sr_living_metal£ $sr_living_metal$ form §ECyborg§! and §BRobot§! £pop£ Pops"
+ mod_planet_pops_tec_cybernetics_sr_zro_produces_mult: "£sr_zro£ $sr_zro$ form §ECyborg§! and §BRobot§! £pop£ Pops"
+ mod_planet_pops_tec_cybernetics_sr_dark_matter_produces_mult: "£sr_dark_matter£ $sr_dark_matter$ form §ECyborg§! and §BRobot§! £pop£ Pops"
+ mod_planet_pops_tec_cybernetics_nanites_produces_mult: "£nanites£ $nanites$ form §ECyborg§! and §BRobot§! £pop£ Pops"
+ mod_planet_pops_tec_cybernetics_minor_artifacts_produces_mult: "£minor_artifacts£ $minor_artifacts$ form §ECyborg§! and §BRobot§! £pop£ Pops"
+ mod_planet_pops_tec_cybernetics_all_research_produces_mult: "$tec_loc_research_resources$ form §ECyborg§! and §BRobot§! £pop£ Pops"
+ mod_planet_pops_tec_cybernetics_all_industrial_produces_mult: "$tec_loc_industrial_resources$ form §ECyborg§! and §BRobot§! £pop£ Pops"
+ mod_planet_pops_tec_cybernetics_all_basic_produces_mult: "$tec_loc_basic_resources$ form §ECyborg§! and §BRobot§! £pop£ Pops"
 
  mod_planet_pops_tec_cybernetics_minerals_produces_add: "$mod_planet_pops_tec_cybernetics_minerals_produces_mult$"
  mod_planet_pops_tec_cybernetics_food_produces_add: "$mod_planet_pops_tec_cybernetics_food_produces_mult$"
@@ -6819,35 +6819,35 @@
  mod_planet_pops_tec_cybernetics_sr_dark_matter_produces_add: "$mod_planet_pops_tec_cybernetics_sr_dark_matter_produces_mult$"
  mod_planet_pops_tec_cybernetics_nanites_produces_add: "$mod_planet_pops_tec_cybernetics_nanites_produces_mult$"
  mod_planet_pops_tec_cybernetics_minor_artifacts_produces_add: "$mod_planet_pops_tec_cybernetics_minor_artifacts_produces_mult$"
- mod_planet_pops_tec_cybernetics_amenities_produces_add: "£amenities£ $PLANET_AMENITIES_TITLE$ form §ECyborg§! and §BRobot§! Pops"
- mod_planet_pops_tec_cybernetics_stability_produces_add: "£stability£ $PLANET_STABILITY_TITLE$ form §ECyborg§! and §BRobot§! Pops"
- mod_planet_pops_tec_cybernetics_trade_value_produces_add: "£trade_value£ $TRADE_VALUE$ form §ECyborg§! and §BRobot§! Pops"
- mod_planet_pops_tec_cybernetics_pop_growth_produces_add: "£mod_pop_growth_speed£ Pop Growth form §ECyborg§! and §BRobot§! Pops"
+ mod_planet_pops_tec_cybernetics_amenities_produces_add: "£amenities£ $PLANET_AMENITIES_TITLE$ form §ECyborg§! and §BRobot§! £pop£ Pops"
+ mod_planet_pops_tec_cybernetics_stability_produces_add: "£stability£ $PLANET_STABILITY_TITLE$ form §ECyborg§! and §BRobot§! £pop£ Pops"
+ mod_planet_pops_tec_cybernetics_trade_value_produces_add: "£trade_value£ $TRADE_VALUE$ form §ECyborg§! and §BRobot§! £pop£ Pops"
+ mod_planet_pops_tec_cybernetics_pop_growth_produces_add: "£mod_pop_growth_speed£ Pop Growth form §ECyborg§! and §BRobot§! £pop£ Pops"
  mod_planet_pops_tec_cybernetics_all_research_produces_add: "$mod_planet_pops_tec_cybernetics_all_research_produces_mult$"
  mod_planet_pops_tec_cybernetics_all_industrial_produces_add: "$mod_planet_pops_tec_cybernetics_all_industrial_produces_mult$"
  mod_planet_pops_tec_cybernetics_all_basic_produces_add: "$mod_planet_pops_tec_cybernetics_all_basic_produces_mult$"
 
- mod_planet_pops_tec_cybernetics_minerals_upkeep_mult: "§ECyborg§! and §BRobot§! Pops £minerals£ $minerals$ Upkeep"
- mod_planet_pops_tec_cybernetics_food_upkeep_mult: "§ECyborg§! and §BRobot§! Pops £food£ $food$ Upkeep"
- mod_planet_pops_tec_cybernetics_energy_upkeep_mult: "§ECyborg§! and §BRobot§! Pops £energy£ $energy$ Upkeep"
- mod_planet_pops_tec_cybernetics_consumer_goods_upkeep_mult: "§ECyborg§! and §BRobot§! Pops £consumer_goods£ $consumer_goods$ Upkeep"
- mod_planet_pops_tec_cybernetics_alloys_upkeep_mult: "§ECyborg§! and §BRobot§! Pops £alloys£ $alloys$ Upkeep"
- mod_planet_pops_tec_cybernetics_physics_research_upkeep_mult: "§ECyborg§! and §BRobot§! Pops £physics_research£ $physics_research$ Upkeep"
- mod_planet_pops_tec_cybernetics_society_research_upkeep_mult: "§ECyborg§! and §BRobot§! Pops £society_research£ $society_research$ Upkeep"
- mod_planet_pops_tec_cybernetics_engineering_research_upkeep_mult: "§ECyborg§! and §BRobot§! Pops £engineering_research£ $engineering_research$ Upkeep"
- mod_planet_pops_tec_cybernetics_rare_crystals_upkeep_mult: "§ECyborg§! and §BRobot§! Pops £rare_crystals£ $rare_crystals$ Upkeep"
- mod_planet_pops_tec_cybernetics_volatile_motes_upkeep_mult: "§ECyborg§! and §BRobot§! Pops £volatile_motes£ $volatile_motes$ Upkeep"
- mod_planet_pops_tec_cybernetics_exotic_gases_upkeep_mult: "§ECyborg§! and §BRobot§! Pops £exotic_gases£ $exotic_gases$ Upkeep"
- mod_planet_pops_tec_cybernetics_unity_upkeep_mult: "§ECyborg§! and §BRobot§! Pops £unity£ $unity$ Upkeep"
- mod_planet_pops_tec_cybernetics_influence_upkeep_mult: "§ECyborg§! and §BRobot§! Pops £influence£ $influence$ Upkeep"
- mod_planet_pops_tec_cybernetics_sr_living_metal_upkeep_mult: "§ECyborg§! and §BRobot§! Pops £sr_living_metal£ $sr_living_metal$ Upkeep"
- mod_planet_pops_tec_cybernetics_sr_zro_upkeep_mult: "§ECyborg§! and §BRobot§! Pops £sr_zro£ $sr_zro$ Upkeep"
- mod_planet_pops_tec_cybernetics_sr_dark_matter_upkeep_mult: "§ECyborg§! and §BRobot§! Pops £sr_dark_matter£ $sr_dark_matter$ Upkeep"
- mod_planet_pops_tec_cybernetics_nanites_upkeep_mult: "§ECyborg§! and §BRobot§! Pops £nanites£ $nanites$ Upkeep"
- mod_planet_pops_tec_cybernetics_minor_artifacts_upkeep_mult: "§ECyborg§! and §BRobot§! Pops £minor_artifacts£ $minor_artifacts$ Upkeep"
- mod_planet_pops_tec_cybernetics_all_research_upkeep_mult: "§ECyborg§! and §BRobot§! Pops $tec_loc_research_resources$ Upkeep"
- mod_planet_pops_tec_cybernetics_all_industrial_upkeep_mult: "§ECyborg§! and §BRobot§! Pops $tec_loc_industrial_resources$ Upkeep"
- mod_planet_pops_tec_cybernetics_all_basic_upkeep_mult: "§ECyborg§! and §BRobot§! Pops $tec_loc_basic_resources$ Upkeep"
+ mod_planet_pops_tec_cybernetics_minerals_upkeep_mult: "§ECyborg§! and §BRobot§! £pop£ Pops £minerals£ $minerals$ Upkeep"
+ mod_planet_pops_tec_cybernetics_food_upkeep_mult: "§ECyborg§! and §BRobot§! £pop£ Pops £food£ $food$ Upkeep"
+ mod_planet_pops_tec_cybernetics_energy_upkeep_mult: "§ECyborg§! and §BRobot§! £pop£ Pops £energy£ $energy$ Upkeep"
+ mod_planet_pops_tec_cybernetics_consumer_goods_upkeep_mult: "§ECyborg§! and §BRobot§! £pop£ Pops £consumer_goods£ $consumer_goods$ Upkeep"
+ mod_planet_pops_tec_cybernetics_alloys_upkeep_mult: "§ECyborg§! and §BRobot§! £pop£ Pops £alloys£ $alloys$ Upkeep"
+ mod_planet_pops_tec_cybernetics_physics_research_upkeep_mult: "§ECyborg§! and §BRobot§! £pop£ Pops £physics_research£ $physics_research$ Upkeep"
+ mod_planet_pops_tec_cybernetics_society_research_upkeep_mult: "§ECyborg§! and §BRobot§! £pop£ Pops £society_research£ $society_research$ Upkeep"
+ mod_planet_pops_tec_cybernetics_engineering_research_upkeep_mult: "§ECyborg§! and §BRobot§! £pop£ Pops £engineering_research£ $engineering_research$ Upkeep"
+ mod_planet_pops_tec_cybernetics_rare_crystals_upkeep_mult: "§ECyborg§! and §BRobot§! £pop£ Pops £rare_crystals£ $rare_crystals$ Upkeep"
+ mod_planet_pops_tec_cybernetics_volatile_motes_upkeep_mult: "§ECyborg§! and §BRobot§! £pop£ Pops £volatile_motes£ $volatile_motes$ Upkeep"
+ mod_planet_pops_tec_cybernetics_exotic_gases_upkeep_mult: "§ECyborg§! and §BRobot§! £pop£ Pops £exotic_gases£ $exotic_gases$ Upkeep"
+ mod_planet_pops_tec_cybernetics_unity_upkeep_mult: "§ECyborg§! and §BRobot§! £pop£ Pops £unity£ $unity$ Upkeep"
+ mod_planet_pops_tec_cybernetics_influence_upkeep_mult: "§ECyborg§! and §BRobot§! £pop£ Pops £influence£ $influence$ Upkeep"
+ mod_planet_pops_tec_cybernetics_sr_living_metal_upkeep_mult: "§ECyborg§! and §BRobot§! £pop£ Pops £sr_living_metal£ $sr_living_metal$ Upkeep"
+ mod_planet_pops_tec_cybernetics_sr_zro_upkeep_mult: "§ECyborg§! and §BRobot§! £pop£ Pops £sr_zro£ $sr_zro$ Upkeep"
+ mod_planet_pops_tec_cybernetics_sr_dark_matter_upkeep_mult: "§ECyborg§! and §BRobot§! £pop£ Pops £sr_dark_matter£ $sr_dark_matter$ Upkeep"
+ mod_planet_pops_tec_cybernetics_nanites_upkeep_mult: "§ECyborg§! and §BRobot§! £pop£ Pops £nanites£ $nanites$ Upkeep"
+ mod_planet_pops_tec_cybernetics_minor_artifacts_upkeep_mult: "§ECyborg§! and §BRobot§! £pop£ Pops £minor_artifacts£ $minor_artifacts$ Upkeep"
+ mod_planet_pops_tec_cybernetics_all_research_upkeep_mult: "§ECyborg§! and §BRobot§! £pop£ Pops $tec_loc_research_resources$ Upkeep"
+ mod_planet_pops_tec_cybernetics_all_industrial_upkeep_mult: "§ECyborg§! and §BRobot§! £pop£ Pops $tec_loc_industrial_resources$ Upkeep"
+ mod_planet_pops_tec_cybernetics_all_basic_upkeep_mult: "§ECyborg§! and §BRobot§! £pop£ Pops $tec_loc_basic_resources$ Upkeep"
 
  mod_planet_pops_tec_cybernetics_minerals_upkeep_add: "$mod_planet_pops_tec_cybernetics_minerals_upkeep_mult$"
  mod_planet_pops_tec_cybernetics_food_upkeep_add: "$mod_planet_pops_tec_cybernetics_food_upkeep_mult$"
@@ -6867,7 +6867,7 @@
  mod_planet_pops_tec_cybernetics_sr_dark_matter_upkeep_add: "$mod_planet_pops_tec_cybernetics_sr_dark_matter_upkeep_mult$"
  mod_planet_pops_tec_cybernetics_nanites_upkeep_add: "$mod_planet_pops_tec_cybernetics_nanites_upkeep_mult$"
  mod_planet_pops_tec_cybernetics_minor_artifacts_upkeep_add: "$mod_planet_pops_tec_cybernetics_minor_artifacts_upkeep_mult$"
- mod_planet_pops_tec_cybernetics_amenities_upkeep_add: "§ECyborg§! and §BRobot§! Pops £amenities£ $PLANET_AMENITIES_TITLE$ Upkeep"
+ mod_planet_pops_tec_cybernetics_amenities_upkeep_add: "§ECyborg§! and §BRobot§! £pop£ Pops £amenities£ $PLANET_AMENITIES_TITLE$ Upkeep"
  mod_planet_pops_tec_cybernetics_all_research_upkeep_add: "$mod_planet_pops_tec_cybernetics_all_research_upkeep_mult$"
  mod_planet_pops_tec_cybernetics_all_industrial_upkeep_add: "$mod_planet_pops_tec_cybernetics_all_industrial_upkeep_mult$"
  mod_planet_pops_tec_cybernetics_all_basic_upkeep_add: "$mod_planet_pops_tec_cybernetics_all_basic_upkeep_mult$"
